[gd_scene load_steps=4 format=3 uid="uid://658a8m0tv7co"]

[ext_resource type="Script" uid="uid://6hha3rp0y06x" path="res://main.gd" id="1_hdtwm"]
[ext_resource type="Script" uid="uid://dj6od4pgnjnit" path="res://pending_task_list.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://sekjmi0k6llw" path="res://complete_task_list.gd" id="3_h2yge"]

[node name="main" type="Node"]
script = ExtResource("1_hdtwm")

[node name="AddTaskButton" type="Button" parent="."]
offset_left = 740.0
offset_top = 249.0
offset_right = 844.0
offset_bottom = 352.0
text = "ADD"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 332.0
offset_top = 249.0
offset_right = 732.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 25
placeholder_text = "type task here"
wrap_mode = 1

[node name="PendingTaskList" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 339.0
offset_top = 136.0
offset_right = 379.0
offset_bottom = 176.0
script = ExtResource("2_0xm2m")

[node name="CompleteTaskList" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 340.0
offset_top = 400.0
offset_right = 380.0
offset_bottom = 440.0
script = ExtResource("3_h2yge")

[connection signal="pressed" from="AddTaskButton" to="." method="_on_add_task_button_pressed"]
